--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,31 @@
 body {
   padding: 0;
-  margin: 0;
+  margin-left: 150px;
 }
 
 #map,
 body,
 html {
-  height: 100%;
+  height: 80%;
+  width: 90%;
+
+  
+}
+
+.info.legend {
+  background-color: white;
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  line-height: 18px;
+  color: #555;
+}
+
+.info.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
 }
